--- a/result-app-pod.yml
+++ b/result-app-pod.yml
@@ -10,4 +10,4 @@ spec:
     - name: result-app
       image: dockersamples/examplevotingapp_result
       ports:
-        - containerPorts: 80
+        - containerPort: 80
