--- a/postgres-pod.yml
+++ b/postgres-pod.yml
@@ -10,4 +10,4 @@ spec:
     - name: postgres
       image: postgres:9.4
       ports:
-        - containerPorts: 5432
+        - containerPort: 5432
