--- a/voting-app-pod.yml
+++ b/voting-app-pod.yml
@@ -10,4 +10,4 @@ spec:
     - name: voting-app
       image: dockersamples/examplevotingapp_vote
       ports:
-        - containerPorts: 80
+        - containerPort: 80
