--- a/voting-service.yml
+++ b/voting-service.yml
@@ -9,7 +9,7 @@ spec:
   type: LoadBalancer
   ports:
     - port: 80
-      targetport: 80
-  selectors:
+      targetPort: 80
+  selector:
     name: voting-app-pod
     app: demo-voting-app 
