--- a/redis-service.yml
+++ b/redis-service.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ports:
     - port: 6379
-      targetport: 6379
-  selectors:
+      targetPort: 6379
+  selector:
     name: redis-pod
     app: demo-voting-app    
