--- a/postgres-service.yml
+++ b/postgres-service.yml
@@ -9,6 +9,6 @@ spec:
   ports:
     - port: 5432
       targetPort: 5432
-  selectors:
+  selector:
     name: postgres-pod
     app: demo-voting-app   
