--- a/result-service.yml
+++ b/result-service.yml
@@ -11,6 +11,6 @@ spec:
     - port: 80
       targetPort: 80
   selector:
-    name: redis-pod
+    name: result-app-pod
     app: demo-voting-app
  
