--- a/postgres-pod.yml
+++ b/postgres-pod.yml
@@ -11,8 +11,10 @@ spec:
       image: postgres:9.4
       env:
         - name: POSTGRES_USER
-          value: "postgres"
+          value: postgres
         - name: POSTGRES_PASSWORD
-          value: "postgres"
+          value: postgres
+        - name: POSTGRES_HOST_AUTH_METHOD
+          value: trust 
       ports:
         - containerPort: 5432
